# worker-rs-demo

./: Cargo.toml  wrangler.toml
src/: lib.rs
