[package]
name = "cors-proxy"
version = "0.1.0"
edition = "2021"
authors = [ "bearboy80 <2373319771@qq.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.3.0", features=['http', 'axum'] }
worker-macros = { version="0.3.0", features=['http'] }
axum  = { version = "0.7", default-features = false ,features=['query']}
tower-service = {version = "0.3.2"}
console_error_panic_hook = { version = "0.1.1" }
tower-http = {version="0.5.2",features =["cors"]}
axum-macros = "0.4.1"
